<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/graylight"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="390dp">
        <LinearLayout
            android:background="@drawable/gradientbackground"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_avatar"
                android:layout_marginTop="25dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="150dp"
                android:layout_height="150dp"/>
            <TextView
                android:id="@+id/txt_nameavatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/name"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="22sp"/>
            <TextView
                android:id="@+id/txt_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/username"
                android:textColor="#ffffff"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/txt_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:text="@string/company"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/txt_location"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:text="@string/location"
                android:layout_gravity="center"/>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
            android:layout_width="400dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="280dp"
            android:outlineSpotShadowColor="#000000">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">
                <LinearLayout
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/txt_repo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repository"
                        android:textColor="#575757"
                        android:textSize="16sp"/>
                </LinearLayout>

                <LinearLayout
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/txt_follower"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/follower"
                        android:textColor="#575757"
                        android:textSize="16sp"/>
                </LinearLayout>

                <LinearLayout
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/txt_following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/following"
                        android:textColor="#575757"
                        android:textSize="16sp"/>
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#FAFAFA"
        app:tabTextColor="@android:color/black"/>
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>